# storyboard_player

./: CMakeLists.txt  README.md
assets/shader/: sprite_fragment.glsl  sprite_vertex.glsl
src/: main.cpp
src/osb/: Sprite.cpp  Sprite.h
src/shader/: Shader.cpp  Shader.h  SpriteShader.cpp  SpriteShader.h
